Add additional graphs and add some preliminary discussion and analysis of results

--- a/content/academics.html
+++ b/content/academics.html
@@ -2,13 +2,16 @@
 <h3> Grades </h3>
 <p class="half">
   <span class="big">
-    Study terms gradually become more difficult, but class averages remain
-    consistent.
+  Starting in 1B, class average gradually increased over time.
   </span>
-  3B was voted as the most difficult term by students. Despite being the most
-  difficult, its class average was only slightly lower compared to other terms.
-  This suggests that students progressively become better at coping with
-  difficult courses.
+  We can also notice that B terms tend to yield a slighly lower average, this is
+  likely the results of hard courses being taken on a B term, such as ECE 106, ECE 124,
+  SE 380, etc.
+  <br /><br />
+  4A and 4B term average appear to be significantly higher among respondents. This can be
+  due to several reasons; starting in 4th year SE students are able to pick 3-4 elective per term, 
+  it may as well be the result of the transition to an online delivery for courses or because only 19
+  respondents disclosed their average in their 4B term.
   <!-- Note that 4B we don't have lots of data points,
   That Median are not really representative
   1A: 86.4
@@ -32,35 +35,84 @@
 <span class="big">
   Attendance consistently drops term by term, except after 3B
 </span>
-  3B also happens to be the hardest term.
-  <br /><br />
-  This could be because students enjoyed their 4A classes more, or maybe they
-  were possibly looking to compensate for their lower grades in 3B.
-<br /><br />
-  Alternatively, students attend slightly more class more during summer terms
-  (2B and 4A).
+  This could be because students enjoyed their 4A & 4B classes more, or maybe students
+  enjoyed attending courses asynchronously.
 </p>
 <div class="half second">
-  <span class="graph-title">Attendance vs Grades</span>
+  <span class="graph-title">Attendance</span>
   <div id="attendance"></div>
 </div>
 
-<div class="vbx4"></div>
+<div class="vbx2"></div>
+
+<h3>Failures</h3>
+<p class="half">
+  <span class="big">
+  34% of respondents failed at least one midterm and 14.5% of respondents failed at least one course.
+  </span>
+  Failing a midterm does not necessarily mean that the course will be failed as well.
+</p>
+<div class="half second">
+  <span class="graph-title"> Failures </span>
+  <div id="failing">
+  </div>
+</div>
+
+<div class="vbx2"></div>
+
+<h3>Options</h3>
+<p class="half">
+  <span class="big">
+  2 respondents completed an option.
+  </span>
+  Graduating with an Option can be complicated to do in Engineering. With a restrictive amount of electives,
+  most students require to either overload a term or terms, or complete courses over coop in order to meet
+  all the requirements for the Option and for graduating in SE.
+</p>
+<div class="half second">
+  <span class="graph-title"> Type of Options </span>
+  <div id="options">
+  </div>
+</div>
+
+<div class="vbx2"></div>
+
+<h3>Favourite Professors</h3>
+<p class="half">
+  <span class="big">
+  The most favourite professor with 14% of the votes is Martin Pei.
+  </span>
+  For this section, students were only able to select one professor among all the
+  professors they had during their academic career.
+  <br /><br />
+  Some professors listed in this section did not teach a core course, which means
+  not every student had the opportunity to be taught with said professors.
+</p>
+<div class="half second">
+  <span class="graph-title"> Favourite Professors </span>
+  <div id="prof-cloud">
+  </div>
+</div>
+
+<div class="vbx2"></div>
 
 
 <h2> Courses </h2>
-<h3> Favourite required courses </h3>
+<h3> Favourite courses </h3>
 <p class="half">
 <span class="big">
-  Although 3B was the most difficult term, it had Concurrency (CS343), the most popular course.
+  Among core courses, <a href="https://uwflow.com/course/math239" target="_blank">MATH 239 (Introduction to Combinatorics)</a>
+  and <a href="https://uwflow.com/course/cs349" target="_blank">CS 349 (User Interface)</a> were the most popular courses. Among electives 
+  <a href="https://uwflow.com/course/ece454" target="_blank">ECE 454 (Distributed Computing)</a>
+  was the most popular.
+  <!-- Although 3B was the most difficult term, it had Concurrency (CS343), the most popular course. -->
 </span>
-  The top 8 favourited courses were all between 2A and 3B. Although
-  these terms are slightly more difficult, they also happen to have the most
-  interesting content for students.
-  <br /><br />
-  Students are also required to take several technical electives to fulfill
+  The top favourited courses were all taken between 3A and 4B, this can either be because
+  students don't remember much of their first and second year courses, or that students
+  enjoyed more higher level courses.
+  <!-- Students are also required to take several technical electives to fulfill
   their credits.  The most popular electives included Graphics (CS488),
-  Distributed Computing (ECE 454), and Human-Computer Interaction (CS 449).
+  Distributed Computing (ECE 454), and Human-Computer Interaction (CS 449). -->
 </p>
 <div class="half second">
   <span class="graph-title">Favourite mandatory courses</span>
@@ -70,62 +122,74 @@
 <h3> Least favourite required courses </h3>
 <p class="half">
   <span class="big">
-    3B also had Feedback Controls (SE 380), the most disliked course, which
-    explains why it was the hardest term.
+    <a href="https://uwflow.com/course/se463" target="_blank">SE 463 (Software Requirements Specification and Analysis)</a>, 
+    <a href="https://uwflow.com/course/ece106" target="_blank">ECE 106 (Electricity and Magnetism)</a>
+    and <a href="https://uwflow.com/course/se380" target="_blank">SE 380 (Introduction to Feedback Control)</a> were the most disliked courses.
   </span>
-  Although SE 463 is just as disfavoured, it was a much easier course, which explains why 4A
-  was an easier term.
-  <br /><br />
-  It's important to note that courses that were disliked do not imply that
+  Most of the disliked courses were core courses, although some of them were also Linkage Electives (SMF 101, SPCOMM 100, SPCOMM 223)
+  <!-- Although SE 463 is just as disfavoured, it was a much easier course, which explains why 4A
+  was an easier term. -->
+  <!-- It's important to note that courses that were disliked do not imply that
   students find the content useless. Instead, there are a variety of factors
   such as personal interests, final grades, and assignments. For example, Logic and
   Computation (SE 212) is considered useful by 88% of students
   <a href="https://uwflow.com/course/se212" target="_blank">
-    according to UWFlow.</a>
+    according to UWFlow.</a> -->
 </p>
 <div class="half">
   <span class="graph-title">Least favourite mandatory courses</span>
   <div id="disliked-course"></div>
 </div>
-<div class="vbx2"></div>
 
-<h2> Does X affect grades?</h2>
-
-<h3> Attendance </h3>
+<h3> Largest Workload </h3>
 <p class="half">
 <span class="big">
-  There was no correlation between self-reported attendance and grades.
+  Among core courses, <a href="https://uwflow.com/course/se350" target="_blank">SE 350 (Operating Systems)</a>
+  and <a href="https://uwflow.com/course/cs343" target="_blank">CS 343 (Concurrent and Parallel Programming)</a> were the courses with the largest workload. Among electives 
+  <a href="https://uwflow.com/course/cs444" target="_blank">CS 444 (Compiler Construction)</a>
+  was the course with the largest workload.
 </span>
-To be clear, this does not suggest that not going to class is
-beneficial. Instead, it suggests that it is possible to achieve good grades without
-attending all classes.
+  Although these courses involved a high workload, most of them were also popular among respondents.
 </p>
 <div class="half second">
-  <span class="graph-title">Attendance compared to relative grade from the
-    average</span>
-  <div id="distribution"></div>
+  <span class="graph-title">Course with the largest workload</span>
+  <div id="largest-workload"></div>
 </div>
+
 <div class="vbx2"></div>
 
-<h3> Parents' education </h3>
+<h2> Overloading </h2>
+<h3>Overloading & Academic Terms</h3>
 <p class="half">
   <span class="big">
-    Grades are slightly higher when at least one parent had a university-level degree.
+  28 respondents overloaded at some point during their academic degree.
   </span>
-  This suggests that there could be a correlation between parents' education and how
-  academically inclined students are.
-  <br /><br />
-  However, this does not suggest that having a parent with a university-level degree is a
-  requirement for getting good grades.
+  The 4A and 3A terms are the most popular term to overload. The SE curriculum encourages
+  students to overload in their 4A term to have a lighter term in 4B, which can be busy
+  with graduation traditions and FYDP work on top of courses.
 </p>
 <div class="half second">
-  <span class="graph-title">Parents' education compared to grades</span>
-  <div id="parent-grades"></div>
+  <span class="graph-title"> Overloading vs Academic Terms</span>
+  <div id="overloading">
+  </div>
+</div>
+
+<h3>Overloading Reasons</h3>
+<p class="half">
+  <span class="big">
+  The most popular reasons to overload were to have a lighter term and to
+  take more electives than prescribed.
+</p>
+<div class="half second">
+  <span class="graph-title"> Reasons for Overloading</span>
+  <div id="overloading-reasons">
+  </div>
 </div>
 
 <div class="vbx2"></div>
 
-<h3>Location</h3>
+<h2> Location </h2>
+<h3>Pre-Covid</h3>
 <p class="half">
   <span class="big">
   The preferred residences in first year was V1 and UWP (not CMH). From first year on, Lester was the most popular
@@ -134,8 +198,6 @@ attending all classes.
   <!--, which span 27 different countries. -->
   </span>
   The likely popularity of Lester street is how close it is to Campus. 
-  When COVID hit most people decided to stay in Waterloo in their 4A term, likely hoping that measures would loosen over the summer.
-  However, in 4B, most students decided to move back home.
   <!-- There was a significant number of students Caucasians, and East
   Asians, although it is interesting to note that most Women were East Asian. -->
 </p>
@@ -152,6 +214,22 @@ attending all classes.
     <div class="loc-pre-item c5">3A</div>
     <div class="loc-pre-item c6">3B</div>
   </div>
+</div>
+
+<h3>Post-Covid</h3>
+<p class="half">
+  <span class="big">
+  When COVID hit most people decided to stay in Waterloo in their 4A term.
+  <!-- Students come from many different ethnic backgrounds  -->
+  <!--, which span 27 different countries. -->
+  </span>
+  Students likely were hoping that measures would loosen over the summer or to occupy
+  student housing rented for the year.
+  However, in 4B, most students decided to move back home.
+  <!-- There was a significant number of students Caucasians, and East
+  Asians, although it is interesting to note that most Women were East Asian. -->
+</p>
+<div class="half second">
   <span class="graph-title">Students' location post COVID</span>
   <div id="campus-location-post"></div>
 
@@ -163,6 +241,35 @@ attending all classes.
   <p class="full center">
   <b> Interactive: </b> Click on a term number to view the plot for that term.
   </p>
+</div>
+
+<h2> Does X affect grades? [Still work  in progress]</h2>
+
+<!-- <h3> Attendance </h3>
+<p class="half">
+<span class="big">
+  There was no correlation between self-reported attendance and grades.
+</span>
+To be clear, this does not suggest that not going to class is
+beneficial. Instead, it suggests that it is possible to achieve good grades without
+attending all classes.
+</p>
+<div class="half second">
+  <span class="graph-title">Attendance compared to relative grade from the
+    average</span>
+  <div id="distribution"></div>
+</div>
+<div class="vbx2"></div> -->
+
+<h3> Parents' education </h3>
+<p class="half">
+  <span class="big">
+  Parent's education did not appear to impact the median overall average among respondents.
+  </span>
+</p>
+<div class="half second">
+  <span class="graph-title">Parents' education compared to grades</span>
+  <div id="parent-grades"></div>
 </div>
 
 <div class="vbx4"></div>
