Update Lifestyle Section (#6)
* Overwrite Lifestyle Section, Add Grocery and Travel

* Add Lifestyle Graph on Restaurants

* Add Lifestyle Graphs on Sleep

* Add Lifestyle Graph on Food Frequencies

* Add Lifestyle Graphs on Extracurriculars

* Add Lifestyle Sectio on Partying

* Rename Lifestyle Section Title

* Reword to Address Nits in PR

--- a/content/lifestyle.html
+++ b/content/lifestyle.html
@@ -1,216 +1,168 @@
-<h1 id="lifestyle"> Interests and lifestyle</h1>
+<h1 id="lifestyle"> Lifestyle & Experiences</h1>
 
-<h3> Extracurriculars </h3>
+<h3> Food Preparation </h3>
 <p class="half">
-  <span class="big">Unlike high school, almost half of students were not involved in any
-    extracurriculars during undergrad.
+  <span class="big">
+    Walmart won the hearts (and stomachs) of most SE students, followed by a
+    near equal split of the remaining stores.
   </span>
-  Most students were the only SE 2018 student involved in their club.
-  <br /><br />
-  Most students did not pursue any extracurricular activities related to STEM.
+  Costco seems to have the least appeal, and T&T has grown quickly considering it
+  opened halfway through the program (just before the 3A term).
 </p>
 <div class="half second">
-  <span class="graph-title">Non-comprehensive list of university extrcurriculars</span>
-  <div id="uni-extras"></div>
+  <span class="graph-title">Frequented Grocery Stores</span>
+  <div id="grocery-stores"></div>
+</div>
+
+<p class="half">
+  <span class="big">
+  A minor in culinary studies
+  </span>
+  SE students cooked often, with ~77% doing so on an almost daily basis.
+  That being said, this does not mean that respondants are master chefs.
+</p>
+<div class="half second">
+  <span class="graph-title"> Cooking frequency </span>
+  <div id="cooking-frequency"></div>
 </div>
 
 <div class="vbx4"></div>
 
-<h2> Coding </h2>
-
-<h3> Programming language</h3>
+<h3> Dining </h3>
 <p class="half">
   <span class="big">
-  Python is the most popular programming language among SE students.
+    Kinkaku's AYCE sushi proved to be a fan-favourite amongst SE students.
   </span>
-  Python’s versatility for back-end web, scripting, and especially machine learning could explain
-  why it is so popular in our class. Many of these disciplines are highly in-demand
-  in the software engineering, making Python an ideal general purpose language.
+  Beer Town, Baba Grill, Kabob Hut, Bao Sandwich Bar, and Shinwa were also
+  liked by visitors.
+</p>
+<div class="half second">
+  <span class="graph-title">Favourite Waterloo Restaurants</span>
+  <div id="restaurants"></div>
+</div>
 
+<p class="half">
+  <span class="big">
+  A class of food critics
+  </span>
+  Purchasing food was a common occurrence, with only ~8% of respondants
+  making dining a special event.
+</p>
+<div class="half second">
+  <span class="graph-title"> Dining Out frequency </span>
+  <div id="eating-out-frequency"></div>
+</div>
+
+<div class="vbx4"></div>
+
+<h3> Sleep </h3>
+<p class="half">
+  <span class="big">
+  Students clearly value sleeping at reasonable times
+  </span>
+  The most popular answer was 2 AM, at which point ~84% of SE students
+  have gone to sleep. However, some students still prefer sleeping late,
+  possibly due to work or personal reasons (gaming).
   <br /> <br />
-  Java continues to be very popular since it is
-  commonly taught as students' first programming language in high school.
-
-  <br /> <br />
-  Many companies hire web developers for
-  co-op, which could explain why JavaScript, a scripting language for the web, is
-  so popular. It also happens to be the most popular language amongst all
-  developers <a rel="noopener" href="https://insights.stackoverflow.com/survey/2018/#technology-programming-scripting-and-markup-languages"
-    target="_blank">
-    according to a StackOverflow survey</a>.
+  Sleeping after 6 AM might sound crazy, but then again, some of these students
+  also willingly go to 24 hour hackathons.
 </p>
 <div class="half second">
-  <span class="graph-title"> Favourite programming language</span>
-  <div id="languages" ></div>
-</div>
-
-
-<div class="vbx2"></div>
-
-<h3> Editor </h3>
-<p class="half">
-  <span class="big">
-  Sublime Text is the most popular text editor used in our class, followed by Vim
-  and Atom.
-  </span>
-  Interestingly, Visual Studio Code is one of the less popular editors
-  in our class but it is the most popular editor according to the same StackOverflow
-  survey. This could be because it was released very recently after most
-  students were already accustomed to their favourite editor.
-
-</p>
-<div class="half second">
-  <span class="graph-title"> Favourite editor </span>
-  <div id="editor" ></div>
+  <span class="graph-title"> Usual sleep time </span>
+  <div id="sleep-time"></div>
 </div>
 
 <div class="vbx2"></div>
 
-<h3> Desktop operating system </h3>
 <p class="half">
   <span class="big">
-  The majority of students are using a macOS machine.
+  S.R.E.A.M - Sleep Rules Everything Around Me
   </span>
-  This result isn’t surprising since
-  macOS is built on top of Unix, enabling a lot of important functionality for
-  programmers
-  <br /> <br />
-  Interestingly, most students didn’t have a macOS machine in first year. Many
-  employers provided MacBooks as work laptops which introduced students to macOS's
-  development environment. As a result, many students converted to being MacBook
-  users during university.
+  Future students will be glad to see that studying SE does not mean sacrificing
+  sleep. In fact, ~77% of students sleep >= 7 hours on average, which is the
+  <a href="https://www.cdc.gov/sleep/about_sleep/how_much_sleep.html"> recommended amount for adults by the CDC.</a>
 </p>
 <div class="half second">
-  <span class="graph-title"> Favourite desktop operating system </span>
-  <div id="desktop"></div>
+  <span class="graph-title"> Average sleep duration </span>
+  <div id="sleep-duration"></div>
 </div>
 
+<div class="vbx4"></div>
 
-<div class="vbx2"></div>
-
-<h3> Hackathons </h3>
+<h3> Travel Locations </h3>
 <p class="half">
   <span class="big">
-  More than 80% of students have gone to at least one hackathon.
+    Via coop and exchange, Waterloo SE students have had many
+    opportunities to travel across the world.
   </span>
-  They are especially popular at UWaterloo, home to Hack the North,
-  Canada's biggest hackathon.
-  <br /><br />
-  According to Justin Trudeau, “Hack the North will give you a chance to not
-  only let your imagination run wild, but to meet other people who can help
-  you solve problems: mentors, friends and colleagues, who will challenge you
-  to take your ideas a step further.”
-
+  California and Europe as large regions seem the commonly favoured,
+  likely due to their dominance for coop and exchange respectively.
 </p>
 <div class="half second">
-  <span class="graph-title"> Number of hackathons attended </span>
-  <div id="hackathons">
-  </div>
+  <span class="graph-title">Favourite Travel Locations</span>
+  <div id="travel-locations"></div>
 </div>
 
+<div class="vbx4"></div>
 
-<div class="vbx2"></div>
-
-<h3> Side projects </h3>
+<h3> Extracurriculars </h3>
 <p class="half">
   <span class="big">
-    Most students have also worked on some sort of side project during university.
+    Unlike high school, just over half of students were not involved in any
+    extracurriculars during undergrad.
   </span>
-  Amongst those that have built side projects, only 25% dedicated more than 10
-  hours a month to their side projects. This should be taken with a grain of
-  salt since commitment may vary depending on the term and year.
-  <br /><br />
-  During the first few years of SE, side projects are often a means to getting
-  a better co-op job because it compensates for the lack of software work experience.
+  However a substantial amount did get involved for a few academic terms. 
+  <br></br>
+  We hope that future SEs will buck this trend of disengagement by past classes.
 </p>
 <div class="half second">
-  <span class="graph-title"> Estimated commitment to side projects </span>
-  <div id="side"></div>
+  <span class="graph-title">University extrcurriculars involvement</span>
+  <div id="extracurriculars"></div>
 </div>
 
+<div class="vbx3"></div>
 
-<div class="vbx2"></div>
-
-<h3> Software Discplines</h3>
 <p class="half">
   <span class="big">
-    57% of students enjoy an aspect of web development (front-end, back-end,
-    full-stack).
+    Engineering design teams were not pursued.
   </span>
-    Many co-op positions happen to be related to web development which explains
-    why many students are more familar with it. Alternatively,
-    students could just find web development the most fun. Interestingly, there
-    are no course offerings in SE for web development unlike ML and AI.
-  <br/><br/>
-
-  After web development, 25% of students enjoy machine learning (ML) or
-  artificial intelligence (AI). This aligns with the rising popularity and
-  demand of both disciplines.
-  <br/><br/>
-
-  Only 3 students have expressed interest in mobile development. This is
-  surprising because of both how high in-demand it is and how ubiquitous it is
-  amongst consumers.
-
+  Only 24% of respondants joined a student design team, with none being
+  part of one for more than 3 terms. 
+  <br></br>
+  A likely reason is that software projects can often be done in isolation,
+  allowing a more flexible schedule for students looking to sharpen their skills.
 </p>
 <div class="half second">
-  <span class="graph-title"> Disciplines of interest </span>
-  <div id="disciplines"></div>
+  <span class="graph-title">Engineering design team involvement</span>
+  <div id="design-team"></div>
 </div>
 
-<div class="vbx2"></div>
+<div class="vbx3"></div>
 
-<h3> Exercise </h3>
 <p class="half">
   <span class="big">
-    Almost 80% of students exercise at least a few times a month.
+    SE students who exercise enjoy sports and weight training the most.
   </span>
-  This could be in the form of intramurals, gym, sports team, etc.
-  Students typically start SE intramural teams with one another.
-  Although school is time consuming, most students actively set
-  aside time for physical activities.
+  Hiking and Running are the two next most favoured exercise methods.
 </p>
 <div class="half second">
-  <span class="graph-title"> Exercise frequency </span>
-  <div id="exercise"></div>
+  <span class="graph-title">Favourite exercise methods</span>
+  <div id="fav-exercise"></div>
+</div>
+
+<h3> Partying </h3>
+<p class="half">
+  <span class="big">
+    Making time for fun.
+  </span>
+  At least 38% of respondants went out/partied once a month, with ~18%
+  doing so a few times a week. Only 11% said they never partied. This
+  somewhat goes against the stereotype of SE students being antisocial,
+  however this is still not an overwhelmingly outgoing group.
+</p>
+<div class="half second">
+  <span class="graph-title">Frequency of going out</span>
+  <div id="parties"></div>
 </div>
 
 <div class="vbx2"></div>
-
-<h3> Cooking </h3>
-<p class="half">
-  <span class="big">
-    Over half of students cook every week.
-  </span>
-  In other words, many of us have a
-  lot of experience cooking. How good is our cooking? That’s a completely
-  separate question that may be better left unanswered.
-
-  <br/> <br />
-  These results vary depending on whether students are on a study or co-op
-  term, since many companies cater meals during weekdays.
-</p>
-<div class="half second">
-  <span class="graph-title"> Cooking frequency </span>
-  <div id="cooking"></div>
-</div>
-
-<div class="vbx2"></div>
-
-<h3> Sleeping </h3>
-<p class="half">
-  <span class="big">
-  Software engineers may have a reputation for being nocturnal, but most
-  students aren’t night owls.
-  </span>
-  In fact, 72% of students usually sleep before 1AM.
-  However, some students do still prefer sleeping late, possibly because they
-  focus better at night, or maybe they like gaming very late.
-  <br /> <br />
-  5:00AM-6:00AM might sound crazy, but then again, SE students willingly go to 24 hour
-  coding events called hackathons.
-</p>
-<div class="half second">
-  <span class="graph-title"> Estimate sleep time </span>
-  <div id="sleeping"></div>
-</div>
