--- a/content/introduction.html
+++ b/content/introduction.html
@@ -74,10 +74,10 @@ by Joey Loi and Atef Chaudhury.
         Rating, preferred program, paths
       </p>
     </li>
-    <li>5 <a href="#lifestyle">Interests and lifestyle</a></li>
+    <li>5 <a href="#lifestyle">Lifestyle & Experiences</a></li>
     <li>
       <p class="nested">
-        Extracurriculars, software discipline, lifestyle
+        Extracurriculars, travel, food
       </p>
     </li>
     <li>6 <a href="#misc">Miscellaneous</a></li>
