--- a/content/introduction.html
+++ b/content/introduction.html
@@ -64,29 +64,35 @@ by Joey Loi and Atef Chaudhury.
         Grades, attendance, courses, factors affecting grades
       </p>
     </li>
+    <li>4 <a href="#transfers">Transfers</a></li>
+    <li>
+      <p class="nested">
+        Students who transferred out of SE
+      </p>
+    </li>
   </ul>
 </div>
 <div class="half second">
   <ul class="toc">
-    <li>4 <a href="#outcome">Program outcome</a></li>
+    <li>5 <a href="#outcome">Program outcome</a></li>
     <li>
       <p class="nested">
         Rating, preferred program, paths
       </p>
     </li>
-    <li>5 <a href="#lifestyle">Lifestyle & Experiences</a></li>
+    <li>6 <a href="#lifestyle">Lifestyle & Experiences</a></li>
     <li>
       <p class="nested">
         Extracurriculars, travel, food
       </p>
     </li>
-    <li>6 <a href="#misc">Miscellaneous</a></li>
+    <li>7 <a href="#misc">Miscellaneous</a></li>
     <li>
       <p class="nested">
         Reddit usage, academic burnout, conflicts, 
       </p>
     </li>
-    <li>7 <a href="#future">Future</a></li>
+    <li>8 <a href="#future">Future</a></li>
     <li>
       <p class="nested">
         Debt, post-graduation plans
