--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@ layout: main
         {% include_relative content/academics.html %}
     </div>
 </section>
+<section class="bg-4">
+    <div class="content">
+        {% include_relative content/transfers.html %}
+    </div>
+</section>
 <section class="bg-5">
     <div class="content">
         {% include_relative content/outcomes.html %}
