--- a/content/introduction.html
+++ b/content/introduction.html
@@ -80,19 +80,25 @@ by Joey Loi and Atef Chaudhury.
         Rating, preferred program, paths
       </p>
     </li>
-    <li>6 <a href="#lifestyle">Lifestyle & Experiences</a></li>
+    <li>6 <a href="#finances">Finances</a></li>
+    <li>
+      <p class="nested">
+        Budgeting, investments, loans, expenses
+      </p>
+    </li>
+    <li>7 <a href="#lifestyle">Lifestyle & Experiences</a></li>
     <li>
       <p class="nested">
         Extracurriculars, travel, food
       </p>
     </li>
-    <li>7 <a href="#misc">Miscellaneous</a></li>
+    <li>8 <a href="#misc">Miscellaneous</a></li>
     <li>
       <p class="nested">
         Reddit usage, academic burnout, conflicts, 
       </p>
     </li>
-    <li>8 <a href="#future">Future</a></li>
+    <li>9 <a href="#future">Future</a></li>
     <li>
       <p class="nested">
         Debt, post-graduation plans
