--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@ layout: main
         {% include_relative content/outcomes.html %}
     </div>
 </section>
+<section class="bg-4">
+    <div class="content">
+        {% include_relative content/finances.html %}
+    </div>
+</section>
 <section class="bg-1">
     <div class="content">
         {% include_relative content/lifestyle.html %}
