add familial home distance plot

--- a/content/relationships.html
+++ b/content/relationships.html
@@ -23,3 +23,13 @@
   </span>
   <div id="fam-physical"></div>
 </div>
+
+<div class="full">
+  <div id="fam-distance"></div>
+  <span class="graph-title">
+    Average distance (kilometres) from familial home
+  </span>
+</div>
+<p class="full">
+  Disregarded data: the last bins (20 K km away)
+</p>
