add friends graphs

--- a/content/relationships.html
+++ b/content/relationships.html
@@ -33,3 +33,37 @@
 <p class="full">
   Disregarded data: the last bins (20 K km away)
 </p>
+<br/>
+
+<h3>Friendships</h3>
+<p class="full">
+  On average, a softie made 4.40 new friends over coop, and 3.05 over a school term.
+  They would lose on average 1.30 friends over coop, compared to 0.56 over a school
+  term. Thus, the net gain in friends over coop is about 3.1 friends, while the net
+  gain over a school term is 2.49 friends.
+</p>
+<br/>
+<div class="half">
+  <span class="graph-title">
+    Friend gains over a coop term
+  </span>
+  <div id="friends-gain-coop"></div>
+</div>
+<div class="half second">
+  <span class="graph-title">
+    Friend losses over a coop term
+  </span>
+  <div id="friends-loss-coop"></div>
+</div>
+<div class="half">
+  <span class="graph-title">
+    Friend gains over a school term
+  </span>
+  <div id="friends-gain-school"></div>
+</div>
+<div class="half second">
+  <span class="graph-title">
+    Friend losses over a school term
+  </span>
+  <div id="friends-loss-school"></div>
+</div>
