add graphs for relationships/romance

--- a/content/relationships.html
+++ b/content/relationships.html
@@ -67,3 +67,78 @@
   </span>
   <div id="friends-loss-school"></div>
 </div>
+<br/>
+
+<h3>Romance</h3>
+<p class="full">
+  <span class="big">
+    About 33.9 % spent at least half of their degree in a romantic relationship.
+  </span>
+  Out of 56 respondents, 25 % of them spent their entire degree single. About 33.9 %
+  spent at least half of their degree in a romantic relationship. Only 1 person was
+  not single throughout their entire degree.
+</p>
+<br/>
+<div class="full">
+  <span class="graph-title">
+    Percentage of degree spent in a romantic relationship
+  </span>
+  <div id="romance-degree"></div>
+</div>
+<br/>
+
+<div class="half">
+  <span class="graph-title">
+    Number of relationships had during SE degree
+  </span>
+  <div id="romance-relationship-count"></div>
+</div>
+<p class="half second">
+  SEs most commonly had only 1 relationship throughout university. One respondent
+  answered that they had 20 romantic partners during their degree. What a
+  casanova (omitted as to not skew the graph)!
+</p>
+<p class="half">
+  Did SEcest -- a term coined by a previous class profile -- happen in our year?
+  1 out of 8 respondents said yes.
+</p>
+<div class="half second">
+  <span class="graph-title">
+    Have you been/are you in a relationship with somoene in SE?
+  </span>
+  <div id="romance-secest"></div>
+</div>
+<div class="half">
+  <span class="graph-title">
+    SE and Sexuality
+  </span>
+  <div id="romance-sex"></div>
+</div>
+<p class="half second">
+  A majority (62.26 %) of respondents said that they never had a sexual partner
+  before university. That changed to only 26 % of respondents saying that they
+  never had one during university. Someone even boasted have 9 sexual partners
+  during their undergraduate studies.
+</p>
+
+<p class="full">
+  <span class="big">
+    Spilling the infideli-tea.
+  </span>
+  A good 14.8 % of the 54 who answered were involved with cheating. A breakdown of
+  how they were involved can be seen below. Respondents could select more than one
+  involvement cause.
+</p>
+<div class="hvb"></div>
+<div class="half">
+  <span class="graph-title">
+    Cheating involvement
+  </span>
+  <div id="romance-cheating"></div>
+</div>
+<div class="half second">
+  <span class="graph-title">
+    How were you involved in cheating?
+  </span>
+  <div id="romance-cheating-reasons"></div>
+</div>
