--- a/content/relationships.html
+++ b/content/relationships.html
@@ -117,7 +117,7 @@
 <p class="half second">
   A majority (62.26 %) of respondents said that they never had a sexual partner
   before university. That changed to only 26 % of respondents saying that they
-  never had one during university. Someone even boasted have 9 sexual partners
+  never had one during university. Someone even boasted having 9 sexual partners
   during their undergraduate studies.
 </p>
 
