Switch to Light Colour Scheme and Update Class Pic (#8)
* Change Background Colours to Pastel, Dark Font

* Update Background, Font Colours

* Darken Coop Word Cloud Font by Removing Styling

* Update Colours for Pie, Line Charts

* Darken Word Map Text

* Adjust Color of Multi Series Bar Chart

* Set Chart Colors to D3 Scheme Set 2

* Emphasize Legend of Company Word Cloud

* Update Colors for Circle Chart Series Selector

* Update Class Profile Pictures

--- a/content/introduction.html
+++ b/content/introduction.html
@@ -14,7 +14,7 @@
 
 <div class="vb"></div>
 <div class="class-photo">
-  <img src="./img/class.jpg" />
+  <img src="./img/class.png" />
 </div>
 <div class="vbx6"></div>
 
