Updated Cover Page Graphic

--- a/content/hero.html
+++ b/content/hero.html
@@ -1,10 +1,14 @@
-<div class="title">
-  Software
-  Engineering <br />
-  2018 Class Profile
-  <br />
-  <span class="subtitle">
-    <span class="university">University of Waterloo</span><br />
-    Andy Zhang, June 2018
-  </span>
+<div class="cover_half">
+  <div class="title">
+    Software
+    Engineering <br />
+    2021 Class Profile
+    <br />
+    <span class="subtitle">
+      <span class="university">University of Waterloo</span><br />
+    </span>
+  </div>
+</div>
+<div class="cover_second">
+  <img class="cover_graphic" src="../img/cover_graphic.png"/>
 </div>
