Update Image File Path

--- a/content/hero.html
+++ b/content/hero.html
@@ -10,5 +10,5 @@
   </div>
 </div>
 <div class="cover_second">
-  <img class="cover_graphic" src="../img/cover_graphic.png"/>
+  <img class="cover_graphic" src="./img/cover_graphic.png"/>
 </div>
