Add Health Section (#10)
* Add sections for Health

* Add Health data and section layout

* Draw graphs for health

* Add descriptions to health graphs

--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@ layout: main
         {% include_relative content/finances.html %}
     </div>
 </section>
+<section class="bg-6">
+    <div class="content">
+        {% include_relative content/health.html %}
+    </div>
+</section>
 <section class="bg-1">
     <div class="content">
         {% include_relative content/lifestyle.html %}
