--- a/content/introduction.html
+++ b/content/introduction.html
@@ -86,25 +86,31 @@ by Joey Loi and Atef Chaudhury.
         Budgeting, investments, loans, expenses
       </p>
     </li>
-    <li>7 <a href="#lifestyle">Lifestyle & Experiences</a></li>
+    <li>7 <a href="#health">Health</a></li>
+    <li>
+      <p class="nested">
+        Exercise, physical health, mental health
+      </p>
+    </li>
+    <li>8 <a href="#lifestyle">Lifestyle & Experiences</a></li>
     <li>
       <p class="nested">
         Extracurriculars, travel, food
       </p>
     </li>
-    <li>8 <a href="#misc">Miscellaneous</a></li>
+    <li>9 <a href="#misc">Miscellaneous</a></li>
     <li>
       <p class="nested">
         Reddit usage, academic burnout, conflicts, 
       </p>
     </li>
-    <li>9 <a href="#future">Future</a></li>
+    <li>10 <a href="#future">Future</a></li>
     <li>
       <p class="nested">
         Debt, post-graduation plans
       </p>
     </li>
-    <li>9 <a href="#relationships">Family and relationships</a></li>
+    <li>11 <a href="#relationships">Family and relationships</a></li>
     <li>
       <p class="nested">
         Parents, love life
