change respondant to respondent

--- a/content/health.html
+++ b/content/health.html
@@ -121,7 +121,7 @@
 <h3> Controlled Substances </h3>
 <p class="half">
   <span class="big">
-    54% of respondants reported using some form of controlled substance for recreational purposes
+    54% of respondents reported using some form of controlled substance for recreational purposes
   </span>
   Alcohol and marijuana were the most common. 40% reported having alocohol and 30% reported trying marijuana.
 </p>
