--- a/content/lifestyle.html
+++ b/content/lifestyle.html
@@ -19,7 +19,7 @@
   A minor in culinary studies
   </span>
   SE students cooked often, with ~77% doing so on an almost daily basis.
-  That being said, this does not mean that respondants are master chefs.
+  That being said, this does not mean that respondents are master chefs.
 </p>
 <div class="half second">
   <span class="graph-title"> Cooking frequency </span>
@@ -45,7 +45,7 @@
   <span class="big">
   A class of food critics
   </span>
-  Purchasing food was a common occurrence, with only ~8% of respondants
+  Purchasing food was a common occurrence, with only ~8% of respondents
   making dining a special event.
 </p>
 <div class="half second">
@@ -116,7 +116,7 @@
   We hope that future SEs will buck this trend of disengagement by past classes.
 </p>
 <div class="half second">
-  <span class="graph-title">University extrcurriculars involvement</span>
+  <span class="graph-title">University extracurriculars involvement</span>
   <div id="extracurriculars"></div>
 </div>
 
@@ -126,7 +126,7 @@
   <span class="big">
     Engineering design teams were not pursued.
   </span>
-  Only 24% of respondants joined a student design team, with none being
+  Only 24% of respondents joined a student design team, with none being
   part of one for more than 3 terms. 
   <br></br>
   A likely reason is that software projects can often be done in isolation,
@@ -155,7 +155,7 @@
   <span class="big">
     Making time for fun.
   </span>
-  At least 38% of respondants went out/partied once a month, with ~18%
+  At least 38% of respondents went out/partied once a month, with ~18%
   doing so a few times a week. Only 11% said they never partied. This
   somewhat goes against the stereotype of SE students being antisocial,
   however this is still not an overwhelmingly outgoing group.
