--- a/content/misc.html
+++ b/content/misc.html
@@ -4,11 +4,11 @@
   <span class="big">
     We made it through Waterloo Engineering but not without some hurdles along the way.
   </span>
-  On average, respondants felt burnout in 3.34 of 8 academic terms (~42%).
+  On average, respondents felt burnout in 3.34 of 8 academic terms (~42%).
   The median and mode were both 2.
   <br /> <br /> <!-- Newline -->
   The results are heavily skewed towards the lower levels, meaning that
-  most respondants found the academic aspect of SE manageable. 
+  most respondents found the academic aspect of SE manageable.
 </p>
 <div class="half second">
   <span class="graph-title">Count of academic terms in which burnout occurred </span>
@@ -24,7 +24,7 @@
     during their degree.
   </span>
   This question was asked to get some signal on conflicts that SE students may have
-  been involed in. All 49 respondants said they had never fought outside a sport
+  been involed in. All 49 respondents said they had never fought outside a sport
   setting.
 </p>
 <div class="half second">
@@ -41,7 +41,7 @@
     until recently.
   </span>
   Needless to say, we're big redditors. Here is a breakdown of how many hours were
-  spent by respondants on the platform.
+  spent by respondents on the platform.
 </p>
 <div class="half second">
   <span class="graph-title">Weekly Reddit usage</span>
@@ -149,7 +149,7 @@ some stories over the past 5 years.
   <span class="big">
     Most SE students had no doubts about completing their bachelors.
   </span>
-  Only 4 respondants pondered leaving university.
+  Only 4 respondents pondered leaving university.
 </p>
 <div class="half second">
   <span class="graph-title">Considered leaving university</span>
@@ -160,7 +160,7 @@ some stories over the past 5 years.
   <span class="big">
     Results from the previous two graphs came from mostly SE grads.
   </span>
-  44 of the 50 respondants are SE graduates of this year. This represents about half
+  44 of the 50 respondents are SE graduates of this year. This represents about half
   of the total graduates (92). <!-- TODO: confirm that it was 92 grads? -->
 </p>
 <div class="half second">
